--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<script src="js/index.js" type="module"></script>
 </head>
 <body>
+
+	<main>
+		<button id="plus1"></button>
+	</main>
 	
 </body>
 </html>
