--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 
 	<main>
-		<button id="plus1"></button>
+		<button id="minus1">-1</button>
+		<button id="plus1">+1</button>
+		<button id="plus2">+2</button>
 	</main>
 	
 </body>
