--- a/index.html
+++ b/index.html
@@ -8,10 +8,25 @@
 </head>
 <body>
 
+	<header>
+		<h1>Footy Fixtures</h1>
+		<nav>
+			<button id="minus3">-3</button>
+			<button id="minus2">-2</button>
+			<button id="minus1">Yesterday</button>
+			<button id="plus0">Today</button>
+			<button id="plus1">Tomorrow</button>
+			<button id="plus2">+2</button>
+			<button id="plus3">+3</button>
+			<button id="plus4">+4</button>
+			<button id="plus5">+5</button>
+			<button id="plus6">+6</button>			
+		</nav>
+	</header>
 	<main>
-		<button id="minus1">-1</button>
-		<button id="plus1">+1</button>
-		<button id="plus2">+2</button>
+		<section id="fixtures">
+			
+		</section>
 	</main>
 	
 </body>
