--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link href="css/index.css" rel="stylesheet"></link>
 	<script src="js/index.js" type="module"></script>
 </head>
 <body>
@@ -11,16 +12,16 @@
 	<header>
 		<h1>Footy Fixtures</h1>
 		<nav>
-			<button id="minus3">-3</button>
-			<button id="minus2">-2</button>
-			<button id="minus1">Yesterday</button>
-			<button id="plus0">Today</button>
-			<button id="plus1">Tomorrow</button>
-			<button id="plus2">+2</button>
-			<button id="plus3">+3</button>
-			<button id="plus4">+4</button>
-			<button id="plus5">+5</button>
-			<button id="plus6">+6</button>			
+			<button type="button" id="minus3">-3</button>
+			<button type="button" id="minus2">-2</button>
+			<button type="button" id="minus1">Yesterday</button>
+			<button type="button" id="plus0">Today</button>
+			<button type="button" id="plus1">Tomorrow</button>
+			<button type="button" id="plus2">+2</button>
+			<button type="button" id="plus3">+3</button>
+			<button type="button" id="plus4">+4</button>
+			<button type="button" id="plus5">+5</button>
+			<button type="button" id="plus6">+6</button>			
 		</nav>
 	</header>
 	<main>
