--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 	<header>
-		<h1>Footy Fixtures</h1>
+		<h1>Footy Fixtures ⚽</h1>
 		<nav>
 			<button type="button" id="minus3">-3</button>
 			<button type="button" id="minus2">-2</button>
