--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<header>
 		<h1>Footy Fixtures ⚽</h1>
-		<nav>
+		<nav id="date-buttons">
 			<button type="button" id="minus3">-3</button>
 			<button type="button" id="minus2">-2</button>
 			<button type="button" id="minus1">Yesterday</button>
