--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 
 	<header>
-		<h1>Footy Fixtures ⚽</h1>
+		<a href="/">
+			<h1>Footy Fixtures ⚽</h1>
+		</a>
 		<nav id="date-buttons">
 			<button type="button" id="minus3">-3</button>
 			<button type="button" id="minus2">-2</button>
