--- a/index.html
+++ b/index.html
@@ -8,29 +8,28 @@
 	<script src="js/index.js" type="module"></script>
 </head>
 <body>
-
 	<header>
-		<a href="/">
+		<a href="/" title="Home">
 			<h1>Footy Fixtures ⚽</h1>
 		</a>
 		<nav id="date-buttons">
-			<button type="button" id="minus3">-3</button>
-			<button type="button" id="minus2">-2</button>
-			<button type="button" id="minus1">Yesterday</button>
-			<button type="button" id="plus0">Today</button>
-			<button type="button" id="plus1">Tomorrow</button>
-			<button type="button" id="plus2">+2</button>
-			<button type="button" id="plus3">+3</button>
-			<button type="button" id="plus4">+4</button>
-			<button type="button" id="plus5">+5</button>
-			<button type="button" id="plus6">+6</button>			
+			<button type="button" id="minus6" title="6 days prior"></button>
+			<button type="button" id="minus5" title="5 days prior"></button>
+			<button type="button" id="minus4" title="4 days prior"></button>
+			<button type="button" id="minus3" title="3 days prior"></button>
+			<button type="button" id="minus2" title="2 days prior"></button>
+			<button type="button" id="minus1" title="Yesterday">Yesterday</button>
+			<button type="button" id="plus0" title="Today">Today</button>
+			<button type="button" id="plus1" title="Tomorrow">Tomorrow</button>
+			<button type="button" id="plus2" title="2 days later"></button>
+			<button type="button" id="plus3" title="3 days later"></button>
+			<button type="button" id="plus4" title="4 days later"></button>
+			<button type="button" id="plus5" title="5 days later"></button>
+			<button type="button" id="plus6" title="6 days later"></button>			
 		</nav>
 	</header>
 	<main>
-		<section id="fixtures">
-			
-		</section>
-	</main>
-	
+		<section id="fixtures"></section>
+	</main>	
 </body>
 </html>
