--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#3d195b">
 	<title>Document</title>
 	<link href="css/index.css" rel="stylesheet"></link>
 	<script src="js/index.js" type="module"></script>
